# Splatoon-3-Rotation-Display

./: .gitignore  Cargo.toml  README.md  SplatinkRotationDisplay.ini  build.bat
src/: github_data.rs  lib.rs  measure.rs  rm_structure.rs  rm_write.rs  schedule_data.rs  splatfest_data.rs
